--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-simple</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.opencb.biodata</groupId>
+                    <artifactId>biodata-models</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.opencb.biodata</groupId>
+                    <artifactId>biodata-tools</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
