VariantExporter: get chromosome list from cellbase WS or region filter

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
