--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.opencb.biodata</groupId>
+            <artifactId>biodata-models</artifactId>
+            <version>${biodata.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
             <version>1.138</version>
