--- a/vcf-dumper/pom.xml
+++ b/vcf-dumper/pom.xml
@@ -5,19 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>embl.ebi.variation.eva</groupId>
-    <artifactId>eva-tools</artifactId>
+    <artifactId>vcf-dumper</artifactId>
     <version>0.1</version>
-    <packaging>pom</packaging>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.3.RELEASE</version>
+        <groupId>embl.ebi.variation.eva</groupId>
+        <artifactId>eva-tools</artifactId>
+        <version>0.1</version>
     </parent>
-
-    <modules>
-        <module>vcf-dumper</module>
-    </modules>
 
     <properties>
         <java.version>1.8</java.version>
