VcfDumper Web service first implementation

--- a/vcf-dumper/pom.xml
+++ b/vcf-dumper/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>vcf-dumper-lib</module>
         <module>vcf-dumper-cli</module>
+        <module>vcf-dumper-ws</module>
     </modules>
 
 </project>
