--- a/vcf-dumper/vcf-dumper-ws/src/main/webapp/WEB-INF/web.xml
+++ b/vcf-dumper/vcf-dumper-ws/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
             <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
+        <async-supported>true</async-supported>
     </servlet>
 
     <servlet-mapping>
