--- a/vcf-dumper/vcf-dumper-ws/pom.xml
+++ b/vcf-dumper/vcf-dumper-ws/pom.xml
@@ -23,6 +23,18 @@
             <artifactId>vcf-dumper-lib</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.5.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.5.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
