--- a/vcf-dumper/pom.xml
+++ b/vcf-dumper/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>embl.ebi.variation.eva</groupId>
+    <groupId>uk.ac.ebi.eva</groupId>
     <artifactId>vcf-dumper</artifactId>
     <version>0.1</version>
     <packaging>pom</packaging>
 
     <parent>
-        <groupId>embl.ebi.variation.eva</groupId>
+        <groupId>uk.ac.ebi.eva</groupId>
         <artifactId>eva-tools</artifactId>
         <version>0.1</version>
     </parent>
