--- a/vcf-dumper/vcf-dumper-cli/pom.xml
+++ b/vcf-dumper/vcf-dumper-cli/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>embl.ebi.variation.eva</groupId>
+        <groupId>uk.ac.ebi.eva</groupId>
         <artifactId>vcf-dumper</artifactId>
         <version>0.1</version>
     </parent>
@@ -23,7 +23,7 @@
             <version>1.47</version>
         </dependency>
         <dependency>
-            <groupId>embl.ebi.variation.eva</groupId>
+            <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>vcf-dumper-lib</artifactId>
             <version>0.1</version>
         </dependency>
