--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>embl.ebi.variation.eva</groupId>
+        <groupId>uk.ac.ebi.eva</groupId>
         <artifactId>vcf-dumper</artifactId>
         <version>0.1</version>
     </parent>
