Trying to fix Non-resolvable parent POM,  'parent.relativePath' points at wrong local POM

--- a/database-migration/pom.xml
+++ b/database-migration/pom.xml
@@ -13,6 +13,7 @@
         <groupId>embl.ebi.variation.eva</groupId>
         <artifactId>eva-tools</artifactId>
         <version>0.1</version>
+        <relativePath></relativePath>
     </parent>
 
     <dependencies>
