Fixed url and version for webservice

--- a/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
@@ -7,6 +7,6 @@ eva.mongo.collections.variants=@eva.mongo.collections.variants@
 eva.mongo.collections.files=@eva.mongo.collections.files@
 
 ##Cellbase REST annotator
-cellbase.rest.url=http://www.ebi.ac.uk/cellbase/webservices/rest/
-cellbase.version=v3
+chromosome.rest.url=http://www.ebi.ac.uk/eva/webservices/rest/
+chromosome.rest.version=v1
 
