--- a/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
@@ -3,6 +3,6 @@ eva.mongo.collections.variants=variants
 eva.mongo.collections.files=files
 
 ##Cellbase REST annotator
-cellbase.rest.url=http://www.ebi.ac.uk/cellbase/webservices/rest/
-cellbase.version=v3
+chromosome.rest.url=http://www.ebi.ac.uk/eva/webservices/rest/
+chromosome.rest.version=v1
 
