--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>htsjdk</artifactId>
             <version>1.138</version>
         </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>3.10.4</version>
+        </dependency>
     </dependencies>
 
     <build>
