- ChromosomeWsClient to EvaWsClient - chromosome.rest properties to eva.rest

--- a/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
@@ -7,6 +7,6 @@ eva.mongo.collections.variants=@eva.mongo.collections.variants@
 eva.mongo.collections.files=@eva.mongo.collections.files@
 
 ##Cellbase REST annotator
-chromosome.rest.url=http://www.ebi.ac.uk/eva/webservices/rest/
-chromosome.rest.version=v1
+eva.rest.url=http://www.ebi.ac.uk/eva/webservices/rest/
+eva.rest.version=v1
 
