--- a/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
@@ -3,6 +3,6 @@ eva.mongo.collections.variants=variants
 eva.mongo.collections.files=files
 
 ##Cellbase REST annotator
-chromosome.rest.url=http://localhost:1080/eva/webservices/rest/
-chromosome.rest.version=v1
+eva.rest.url=http://localhost:1080/eva/webservices/rest/
+eva.rest.version=v1
 
