- Updated comment in properties - Blanked eva.rest.url

--- a/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
@@ -2,7 +2,7 @@ eva.mongo.host=localhost:27017
 eva.mongo.collections.variants=variants
 eva.mongo.collections.files=files
 
-##Cellbase REST annotator
-eva.rest.url=http://localhost:1080/eva/webservices/rest/
+##EVA REST url and version for querying chromosomes
+eva.rest.url=
 eva.rest.version=v1
 
