Fixed issue #16 by excluding "slf4j-simple" dependency from the build.

--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -27,6 +27,10 @@
                     <groupId>uk.ac.ebi.eva</groupId>
                     <artifactId>biodata-models</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
