implemented annotation migration and tests

--- a/database-migration/src/main/resources/application.properties
+++ b/database-migration/src/main/resources/application.properties
@@ -3,8 +3,9 @@ db.collections.files.name=
 db.collections.variants.name=
 db.collections.annotations.name=
 
-db.database=
-db.host=
+db.name=
+db.hosts=
+db.port=
 db.authentication-database=
 db.username=
 db.password=
