--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
-            <version>1.138</version>
+            <version>htsjdk-2.10.1-9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mock-server</groupId>
