--- a/dbsnp-importer/pom.xml
+++ b/dbsnp-importer/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>dbsnp-importer</name>
-    <description>Tool to import dbSNP variants into the EVA warehouse</description>
+    <description>Tool to import dbSNP variants into the EVA variant warehouse</description>
 
     <parent>
         <groupId>uk.ac.ebi.eva</groupId>
@@ -28,14 +28,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-batch</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -53,9 +45,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <scope>test</scope>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>variation-commons-core</artifactId>
+            <version>0.5-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
