--- a/vcf-dumper/vcf-dumper-ws/src/main/resources/application.properties
+++ b/vcf-dumper/vcf-dumper-ws/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+# Configure JDBC datasource OR JNDI datasource
+# EVAPRO Datasource configuration
+#spring.datasource.url=jdbc:postgresql://
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+# EVAPRO JNDI configuration
+spring.datasource.jndi-name =  java:/comp/env/jdbc/@eva.evapro.datasource@
+
+#Avoid hibernate ddl schema generation/update or validation
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.jmx.enabled = false
+
 springfox.documentation.swagger.v2.path=/api
+
+#spring.profiles.active=oauth2-security
+#security.oauth2.resource.user-info-uri = ...
+
+spring.data.mongodb.host=@eva.mongo.host@
+spring.data.mongodb.authentication-database=@eva.mongo.auth.db@
+spring.data.mongodb.username=@eva.mongo.user@
+spring.data.mongodb.password=@eva.mongo.passwd@
+spring.data.mongodb.read-preference=@eva.mongo.read-preference@
+
+db.collection-names.files=@eva.mongo.collections.files@
+db.collection-names.variants=@eva.mongo.collections.variants@
+db.collection-names.annotation-metadata=@eva.mongo.collections.annotation-metadata@
+db.collection-names.features=@eva.mongo.collections.features@
+db.collection-names.annotations=@eva.mongo.collections.annotations@
