--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
+spring.datasource.username=SA
 spring.datasource.password=
 
 # The same embedded database is reused by your whole test suite regardless of the number of application contexts.
