--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
-            <version>2.10.1-27-g8629d2e-SNAPSHOT</version>
+            <version>2.11.0-10-g9991e55-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mock-server</groupId>
