--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <id>eva-snapshots</id>
             <url>https://oss.jfrog.org/artifactory/libs-snapshot</url>
         </repository>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>broadinstitute-snapshots</id>
+            <url>https://broadinstitute.jfrog.io/broadinstitute/simple/libs-snapshot-local</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
