Testing: Organism data in PUBLIC schema, obsvariation in dbsnp_shared. Production: example properties with custom schema in PostgreSQL

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
 spring.datasource.username=SA
 spring.datasource.password=
 
@@ -8,4 +8,3 @@ spring.datasource.password=
 spring.datasource.generate-unique-name=true
 
 spring.jpa.hibernate.ddl-auto=none
-sql.syntax_pgs=true
