add ImportBatchStep and its configuration.
the test DbsnpImporterApplicationTests passes, which means
that the applicationContext loads properly the properties and
the beans

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -8,3 +8,13 @@ spring.datasource.password=
 spring.datasource.generate-unique-name=true
 
 spring.jpa.hibernate.ddl-auto=none
+
+
+processor=SubSnpCoreFieldsToEvaSubmittedVariantProcessor
+dbsnpBuild=150
+batchId=11825
+assembly=Gallus_gallus-5.0
+assemblyTypes=Primary_Assembly
+pageSize=100
+variantsCollection=variants
+chunkSize=100
