--- a/dbsnp-importer/src/main/resources/application.properties
+++ b/dbsnp-importer/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=@eva.evapro.username@
 spring.datasource.password=@eva.evapro.password@
 
 spring.jpa.generate-ddl=false
+
+## Job repository database
+# See JobRepositoryConfiguration, use maven profiles to put the next properties in the environment:
+eva.jobrepository.driver-class-name=@eva.jobrepository.driver-class-name@
+eva.jobrepository.url=@eva.jobrepository.url@
+eva.jobrepository.username=@eva.jobrepository.username@
+eva.jobrepository.password=@eva.jobrepository.password@
