wrong jobRepository test configuration
java.lang.IllegalStateException: Existing transaction detected in JobRepository. Please fix this and try again (e.g. remove @Transactional annotations from client).

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -2,12 +2,20 @@ spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
 spring.datasource.username=SA
 spring.datasource.password=
+spring.datasource.schema=schema.sql
 
 # The same embedded database is reused by your whole test suite regardless of the number of application contexts.
 # Set to true to make sure that each context has a separate embedded database.
 spring.datasource.generate-unique-name=true
 
 spring.jpa.hibernate.ddl-auto=none
+
+eva.jobrepository.driver-class-name=org.hsqldb.jdbcDriver
+eva.jobrepository.url=jdbc:hsqldb:mem:jobRepositoryDb;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+eva.jobrepository.username=SA
+eva.jobrepository.password=
+
+#spring.batch.initializer.enabled=false
 
 
 processor=SubSnpCoreFieldsToEvaSubmittedVariantProcessor
@@ -18,3 +26,4 @@ assemblyTypes=Primary_Assembly
 pageSize=100
 variantsCollection=variants
 chunkSize=100
+
