--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -1,19 +1,20 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
-spring.datasource.username=SA
-spring.datasource.password=
-spring.datasource.schema=schema.sql
+dbsnp.datasource.driver-class-name=org.hsqldb.jdbcDriver
+dbsnp.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+dbsnp.datasource.username=SA
+dbsnp.datasource.password=
+dbsnp.datasource.schema=src/test/resources/dbsnp-schema.sql
+dbsnp.datasource.data=src/test/resources/dbsnp-data.sql
 
 # The same embedded database is reused by your whole test suite regardless of the number of application contexts.
 # Set to true to make sure that each context has a separate embedded database.
-spring.datasource.generate-unique-name=true
+#spring.datasource.generate-unique-name=true
 
 spring.jpa.hibernate.ddl-auto=none
 
-eva.jobrepository.driver-class-name=org.hsqldb.jdbcDriver
-eva.jobrepository.url=jdbc:hsqldb:mem:jobRepositoryDb;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
-eva.jobrepository.username=SA
-eva.jobrepository.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:mem:jobRepositoryDb;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+spring.datasource.username=SA
+spring.datasource.password=
 
 #spring.batch.initializer.enabled=false
 
