--- a/dbsnp-importer/pom.xml
+++ b/dbsnp-importer/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
+            <version>2.3.4</version>
             <scope>test</scope>
         </dependency>
 
