--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -11,10 +11,10 @@ dbsnp.datasource.data=src/test/resources/dbsnp-data.sql
 
 spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:mem:jobRepositoryDb;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
-spring.datasource.username=SA
-spring.datasource.password=
+#spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+#spring.datasource.url=jdbc:hsqldb:mem:jobRepositoryDb;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+#spring.datasource.username=SA
+#spring.datasource.password=
 
 #spring.batch.initializer.enabled=false
 
