fix travis build

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -14,6 +14,9 @@ spring.datasource.username=SA
 spring.datasource.password=
 
 
+spring.data.mongodb.port=27017
+
+
 processor=SubSnpCoreFieldsToEvaSubmittedVariantProcessor
 dbsnp-build=150
 batch-id=11825
