update tests with new dbsnp_variant_load table

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -21,8 +21,8 @@ spring.data.mongodb.port=27017
 
 processor=SubSnpCoreFieldsToEvaSubmittedVariantProcessor
 dbsnp-build=150
-batch-id=11825
-assembly=Gallus_gallus-5.0
+batch-id=856370
+assembly=EquCab2.0
 assembly-types=Primary_Assembly
 page-size=100
 variants-collection=variants
