Added Assembly checker processor configuration. Fixed FastaSequenceReaderTest

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -27,3 +27,4 @@ assembly-types=Primary_Assembly
 page-size=100
 variants-collection=variants
 chunk-size=100
+reference-fasta-file=src/test/resources/Gallus_gallus-5.0.test.fa
