Added Assembly checker processor configuration. Fixed FastaSequenceReaderTest

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -28,3 +28,4 @@ page-size=100
 variants-collection=variants
 files-collection=files
 chunk-size=100
+reference-fasta-file=src/test/resources/Gallus_gallus-5.0.test.fa
