One job for EVA submitted variants and another one for the rest

--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -26,4 +26,5 @@ assembly=Gallus_gallus-5.0
 assembly-types=Primary_Assembly
 page-size=100
 variants-collection=variants
+files-collection=files
 chunk-size=100
