--- a/dbsnp-importer/pom.xml
+++ b/dbsnp-importer/pom.xml
@@ -76,6 +76,11 @@
             <scope>test</scope>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.4</version>
+        </dependency>
     </dependencies>
 
     <build>
