Imports and properties clean-up, sample attribute made nullable again

--- a/dbsnp-importer/src/main/resources/application.properties
+++ b/dbsnp-importer/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.generate-ddl=false
 
 ## Job repository database
 # See JobRepositoryConfiguration, use maven profiles to put the next properties in the environment:
-#spring.datasource.driver-class-name=@eva.jobrepository.driver-class-name@
-#spring.datasource.url=@eva.jobrepository.url@
-#spring.datasource.username=@eva.jobrepository.username@
-#spring.datasource.password=@eva.jobrepository.password@
+spring.datasource.driver-class-name=@eva.jobrepository.driver-class-name@
+spring.datasource.url=@eva.jobrepository.url@
+spring.datasource.username=@eva.jobrepository.username@
+spring.datasource.password=@eva.jobrepository.password@
 
