--- a/dbsnp-importer/pom.xml
+++ b/dbsnp-importer/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.3</version>
+        </dependency>
     </dependencies>
 
     <build>
