--- a/dbsnp-importer/src/test/resources/application.properties
+++ b/dbsnp-importer/src/test/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.password=
 spring.data.mongodb.port=27017
 
 
-processor=SubSnpCoreFieldsToVariantProcessor
+job=IMPORT_VARIANTS_JOB
 dbsnp-build=150
 batch-id=11825
 assembly=Gallus_gallus-5.0
