--- a/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
@@ -13,7 +13,7 @@ eva.mongo.user=testuser
 eva.mongo.passwd=testpass
 eva.mongo.auth.db=testdb
 eva.mongo.read-preference=
-eva.mongo.collections.variants=variants_1_2
+eva.mongo.collections.variants=variants
 eva.mongo.collections.files=files
 eva.mongo.collections.annotation-metadata=annotation_metadata
 eva.mongo.collections.annotations=annotations
