--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <opencga.version>0.5.4</opencga.version>
         <biodata.version>0.4.7</biodata.version>
         <cellbase.version>3.1.3</cellbase.version>
+        <variation-commons.version>0.5-SNAPSHOT</variation-commons.version>
     </properties>
 
     <build>
