--- a/dbsnp-importer/src/test/resources/application-eva-submitted.properties
+++ b/dbsnp-importer/src/test/resources/application-eva-submitted.properties
@@ -27,3 +27,4 @@ page-size=100
 variants-collection=variants
 files-collection=files
 chunk-size=100
+reference-fasta-file=src/test/resources/Gallus_gallus-5.0.test.fa
