--- a/vcf-dumper/vcf-dumper-ws/pom.xml
+++ b/vcf-dumper/vcf-dumper-ws/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>uk.ac.ebi.eva</groupId>
         <artifactId>vcf-dumper</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
 
     <artifactId>vcf-dumper-ws</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>vcf-dumper-lib</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
