Removed postgres datasource connection

--- a/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/test/resources/evaTest.properties
@@ -19,4 +19,4 @@ eva.mongo.collections.annotation-metadata=annotationMetadata
 eva.mongo.collections.annotations=annotations
 eva.mongo.collections.features=features
 eva.version=
-eva.evapro.datasource=
+# eva.evapro.datasource=
