--- a/vcf-dumper/vcf-dumper-ws/src/main/resources/application.properties
+++ b/vcf-dumper/vcf-dumper-ws/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 # EVAPRO JNDI configuration
-spring.datasource.jndi-name =  java:/comp/env/jdbc/@eva.evapro.datasource@
+# spring.datasource.jndi-name =  java:/comp/env/jdbc/@eva.evapro.datasource@
 
 #Avoid hibernate ddl schema generation/update or validation
 spring.jpa.hibernate.ddl-auto = none
