improve test for getHtsgetBlocks

--- a/vcf-dumper/vcf-dumper-ws/src/test/resources/application.properties
+++ b/vcf-dumper/vcf-dumper-ws/src/test/resources/application.properties
@@ -4,10 +4,8 @@ spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.read-preference=
 
-db.collection-names.files=testFiles
-db.collection-names.variants=testVariants
-db.collection-names.annotation-metadata=testMetadata
-db.collection-names.annotations=testAnnotations
-db.collection-names.features=testFeatures
-
-eva.htsget.blocksize=2000
+db.collection-names.files=files
+db.collection-names.variants=variants
+db.collection-names.annotation-metadata=annotationsMetadata
+db.collection-names.annotations=annotations
+db.collection-names.features=features
