--- a/dbsnp-importer/src/main/resources/application.properties
+++ b/dbsnp-importer/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 dbsnp.datasource.driver-class-name=org.postgresql.Driver
-dbsnp.datasource.url=@eva.evapro.url@?currentSchema=@eva.dbsnp.schema@
-dbsnp.datasource.username=@eva.evapro.username@
-dbsnp.datasource.password=@eva.evapro.password@
+dbsnp.datasource.url=|eva.evapro.url|?currentSchema=|eva.dbsnp.schema|
+dbsnp.datasource.username=|eva.evapro.username|
+dbsnp.datasource.password=|eva.evapro.password|
 
 spring.jpa.generate-ddl=false
 
 ## Job repository database
 # See JobRepositoryConfiguration, use maven profiles to put the next properties in the environment:
-spring.datasource.driver-class-name=@eva.jobrepository.driver-class-name@
-spring.datasource.url=@eva.jobrepository.url@
-spring.datasource.username=@eva.jobrepository.username@
-spring.datasource.password=@eva.jobrepository.password@
+spring.datasource.driver-class-name=|eva.jobrepository.driver-class-name|
+spring.datasource.url=|eva.jobrepository.url|
+spring.datasource.username=|eva.jobrepository.username|
+spring.datasource.password=|eva.jobrepository.password|
 
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
