--- a/vcf-dumper/vcf-dumper-lib/src/test/resources/properties/evaTest.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/test/resources/properties/evaTest.properties
@@ -19,3 +19,13 @@ eva.mongo.collections.annotation-metadata=annotationMetadata
 eva.mongo.collections.annotations=annotations
 eva.mongo.collections.features=features
 eva.version=
+
+spring.data.mongodb.host=|eva.mongo.host.test|
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.read-preference=secondaryPreferred
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
