--- a/dbsnp-importer/src/test/resources/properties/application.properties
+++ b/dbsnp-importer/src/test/resources/properties/application.properties
@@ -15,11 +15,14 @@ spring.datasource.url=jdbc:hsqldb:mem:jobRepositoryDb;sql.syntax_pgs=true;DB_CLO
 spring.datasource.username=SA
 spring.datasource.password=
 
-
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.read-preference=secondaryPreferred
 
-
-job=IMPORT_EVASUBMITTED_VARIANTS_JOB
+job=IMPORT_VARIANTS_JOB
 dbsnp-build=150
 batch-id=11825
 assembly=Gallus_gallus-5.0
@@ -28,3 +31,6 @@ variants-collection=variants
 files-collection=files
 chunk-size=100
 reference-fasta-file=src/test/resources/Gallus_gallus-5.0.test.fa
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
