--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -27,24 +27,12 @@
             <groupId>com.lordofthejars</groupId>
             <artifactId>nosqlunit-mongodb</artifactId>
             <scope>test</scope>
-            <version>0.14.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.fakemongo</groupId>
-            <artifactId>fongo</artifactId>
-            <scope>test</scope>
-            <version>2.1.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-databind</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.11.3</version>
+            <version>2.9.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -62,6 +50,11 @@
                     <artifactId>jackson-databind</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
         </dependency>
     </dependencies>
 
@@ -84,7 +77,19 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-
+        <testResources>
+            <testResource>
+                <directory>src/test/resources/properties</directory>
+                <filtering>true</filtering>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources/</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>src/test/resources/properties/*</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
     </build>
 
 </project>
