--- a/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
@@ -1,13 +1,16 @@
-eva.mongo.host=@eva.mongo.host@
-eva.mongo.user=@eva.mongo.user@
-eva.mongo.passwd=@eva.mongo.passwd@
-eva.mongo.auth.db=@eva.mongo.auth.db@
+eva.mongo.host=|eva.mongo.host|
+eva.mongo.user=|eva.mongo.user|
+eva.mongo.passwd=|eva.mongo.passwd|
+eva.mongo.auth.db=|eva.mongo.auth.db|
 
-eva.mongo.collections.variants=@eva.mongo.collections.variants@
-eva.mongo.collections.files=@eva.mongo.collections.files@
+eva.mongo.collections.variants=|eva.mongo.collections.variants|
+eva.mongo.collections.files=|eva.mongo.collections.files|
 
 ##EVA REST url and version for querying chromosomes
 eva.rest.url=http://www.ebi.ac.uk/eva/webservices/rest/
 eva.rest.version=v1
 
 eva.htsget.blocksize=1000
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
