--- a/vcf-dumper/vcf-dumper-ws/pom.xml
+++ b/vcf-dumper/vcf-dumper-ws/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.11.3</version>
+            <version>2.9.7</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
@@ -48,6 +48,11 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <eva.mongo.host.test>localhost</eva.mongo.host.test>
+        <timestamp>${maven.build.timestamp}</timestamp>
+    </properties>
+
     <build>
         <finalName>vcf-dumper</finalName>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -65,6 +70,19 @@
                 </configuration>
             </plugin>
         </plugins>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources/properties</directory>
+                <filtering>true</filtering>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources/</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>src/test/resources/properties/*</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
     </build>
 
 </project>
