Avoid using separate port parameter

--- a/vcf-dumper/vcf-dumper-ws/pom.xml
+++ b/vcf-dumper/vcf-dumper-ws/pom.xml
@@ -49,7 +49,7 @@
     </dependencies>
 
     <properties>
-        <eva.mongo.host.test>localhost</eva.mongo.host.test>
+        <eva.mongo.host.test>localhost:27017</eva.mongo.host.test>
         <timestamp>${maven.build.timestamp}</timestamp>
     </properties>
 
