--- a/dbsnp-importer/pom.xml
+++ b/dbsnp-importer/pom.xml
@@ -21,7 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <eva.mongo.host.test>localhost</eva.mongo.host.test>
+        <eva.mongo.host.test>localhost:27017</eva.mongo.host.test>
     </properties>
 
     <dependencies>
