Fix autowiring issues with SpringDataMongoDbProperties

--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -92,4 +92,8 @@
         </testResources>
     </build>
 
+    <properties>
+        <eva.mongo.host.test>localhost:27017</eva.mongo.host.test>
+    </properties>
+
 </project>
