--- a/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
@@ -1,7 +1,8 @@
-eva.mongo.host=|eva.mongo.host|
-eva.mongo.user=|eva.mongo.user|
-eva.mongo.passwd=|eva.mongo.passwd|
-eva.mongo.auth.db=|eva.mongo.auth.db|
+spring.data.mongodb.host=|eva.mongo.host|
+spring.data.mongodb.authentication-database=|eva.mongo.auth.db|
+spring.data.mongodb.username=|eva.mongo.user|
+spring.data.mongodb.password=|eva.mongo.passwd|
+spring.data.mongodb.read-preference=secondaryPreferred
 
 eva.mongo.collections.variants=|eva.mongo.collections.variants|
 eva.mongo.collections.files=|eva.mongo.collections.files|
