Fix autowiring issues with SpringDataMongoDbProperties

--- a/dbsnp-importer/src/test/resources/properties/application-eva-submitted.properties
+++ b/dbsnp-importer/src/test/resources/properties/application-eva-submitted.properties
@@ -17,6 +17,7 @@ spring.datasource.password=
 
 
 spring.data.mongodb.host=|eva.mongo.host.test|
+spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=
 spring.data.mongodb.password=
