--- a/dbsnp-importer/src/test/resources/properties/application.properties
+++ b/dbsnp-importer/src/test/resources/properties/application.properties
@@ -16,6 +16,7 @@ spring.datasource.username=SA
 spring.datasource.password=
 
 spring.data.mongodb.host=|eva.mongo.host.test|
+spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
