Default authentication mechanism to SCRAM-SHA-1

--- a/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
+++ b/vcf-dumper/vcf-dumper-lib/src/main/resources/eva.properties
@@ -3,6 +3,7 @@ spring.data.mongodb.authentication-database=|eva.mongo.auth.db|
 spring.data.mongodb.username=|eva.mongo.user|
 spring.data.mongodb.password=|eva.mongo.passwd|
 spring.data.mongodb.read-preference=secondaryPreferred
+spring.data.mongodb.authentication-mechanism=SCRAM-SHA-1
 
 eva.mongo.collections.variants=|eva.mongo.collections.variants|
 eva.mongo.collections.files=|eva.mongo.collections.files|
