--- a/dbsnp-importer/pom.xml
+++ b/dbsnp-importer/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>uk.ac.ebi.eva</groupId>
     <artifactId>dbsnp-importer</artifactId>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.3.2</version>
     <packaging>jar</packaging>
 
     <name>dbsnp-importer</name>
