--- a/vcf-dumper/vcf-dumper-cli/pom.xml
+++ b/vcf-dumper/vcf-dumper-cli/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>uk.ac.ebi.eva</groupId>
         <artifactId>vcf-dumper</artifactId>
-        <version>0.3.1-SNAPSHOT</version>
+        <version>0.3.2</version>
     </parent>
 
     <artifactId>vcf-dumper-cli</artifactId>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>vcf-dumper-lib</artifactId>
-            <version>0.3.1-SNAPSHOT</version>
+            <version>0.3.2</version>
         </dependency>
     </dependencies>
 
