--- a/count-stats/src/main/resources/application.properties
+++ b/count-stats/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=password
 #spring.datasource.url=|eva.evapro.jdbc.url|?currentSchema=|eva.evapro.dbsnp-progress.schema|
 #spring.datasource.username=|eva.evapro.user|
 #spring.datasource.password=|eva.evapro.password|
+#springfox.documentation.swagger.v2.path=/api
