--- a/count-stats/src/main/resources/application.properties
+++ b/count-stats/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password
-
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=|eva.evapro.jdbc.url|?currentSchema=|eva.evapro.dbsnp-progress.schema|
-#spring.datasource.username=|eva.evapro.user|
-#spring.datasource.password=|eva.evapro.password|
-#springfox.documentation.swagger.v2.path=/api
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=|eva.evapro.jdbc.url|
+spring.datasource.username=|eva.evapro.user|
+spring.datasource.password=|eva.evapro.password|
